[update] 更新基础项目结构
